Fixed CSRF issue. Bumped to 1.1.7

--- a/dashcols/templates/_layouts/_edit.twig
+++ b/dashcols/templates/_layouts/_edit.twig
@@ -66,6 +66,8 @@
 			{% endif %}
 			{% if layout.id %}<input type="hidden" name="layoutId" value="{{ layout.id }}" />{% endif %}
 
+			<input type="hidden" name="{{ craft.config.csrfTokenName }}" value="{{ craft.request.csrfToken }}">
+
 		</form>
 	</div>
 
