--- a/dashcols/templates/about/index.twig
+++ b/dashcols/templates/about/index.twig
@@ -168,6 +168,12 @@
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
 
+			<h5>Version 1.1.7 - 02.25.15</h5>
+
+			<ul>
+				<li>Fixed issue where layouts would not save if CSRF is enabled</li>
+			</ul>
+
 			<h5>Version 1.1.6 - 02.23.15</h5>
 
 			<ul>
